--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,14 @@
-#Thymeleaf
-spring.thymeleaf.cache : false
-
-#spring.datasource.url=jdbc:mysql://localhost/Test_DB
-
-#Database
-#db.driver: com.mysql.jdbc.Driver
-#db.url: jdbc:mysql://192.168.1.69/blog
-#db.username: root
-#db.password: root
-
-#Hibernate
-#hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
-#hibernate.show_sql: true
-#hibernate.hbm2ddl.auto: create
-#entitymanager.packagesToScan: com.app.blog
+spring.thymeleaf.cache = false
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost/blog_db?characterEncoding=utf8
+spring.datasource.username = root
+spring.datasource.password = root
+# Configure Hibernate DDL mode: create / update
+spring.jpa.properties.hibernate.hbm2ddl.auto = create
+# Disable the default loggers
+#logging.level.org = WARN
+#logging.level.blog = WARN
+### Show SQL executed with parameter bindings
+#logging.level.org.hibernate.SQL = DEBUG
+#logging.level.org.hibernate.type.descriptor = TRACE
+#spring.jpa.properties.hibernate.format_sql = TRUE
