--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,11 @@ spring.jpa.properties.hibernate.hbm2ddl.auto = create
 #logging.level.org.hibernate.SQL = DEBUG
 #logging.level.org.hibernate.type.descriptor = TRACE
 #spring.jpa.properties.hibernate.format_sql = TRUE
+
+
+# wro4j config
+wro4j.managerFactory.preProcessors=cssUrlRewriting,cssImport
+wro4j.managerFactory.postProcessors=rubySassCss,cssMin
+wro4j.managerFactory.resourceWatcherUpdatePeriod = 5
+# set to 5 second to check for resource changes
+# wro.ignoreMissingResources = false
