nuevo css 0 dependencia externa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,5 @@ spring.jpa.properties.hibernate.hbm2ddl.auto = create
 wro4j.managerFactory.preProcessors=cssUrlRewriting,cssImport
 wro4j.managerFactory.postProcessors=rubySassCss,cssMin
 wro4j.managerFactory.resourceWatcherUpdatePeriod = 5
-# set to 5 second to check for resource changes
+wro4j.managerFactory.resourceWatcherAsync = true
 # wro.ignoreMissingResources = false
