--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 #Disabling Thymeleaf template caching
 spring.thymeleaf.cache = false
 
+#Database Configuration
+#spring.datasource.driver-class-name = com.mysql.jdbc.Driver
+#spring.datasource.url = jdbc:mysql://localhost/blog?characterEncoding=utf8
+#spring.datasource.username = root
+#spring.datasource.password = root
+
 #Error managing
-server.error.whitelabel.enabled=false
-spring.mvc.throw-exception-if-no-handler-found=true
-spring.resources.add-mappings=false
+#server.error.whitelabel.enabled=false
+#spring.mvc.throw-exception-if-no-handler-found=true
+#spring.resources.add-mappings=false
