--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,18 @@
 #Disabling Thymeleaf template caching
 spring.thymeleaf.cache = false
+spring.datasource.driver-class-name = com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost/blog?characterEncoding=utf8
+spring.datasource.username = root
+spring.datasource.password = root
+# Configure Hibernate DDL mode: create / update
+spring.jpa.properties.hibernate.hbm2ddl.auto = create
+# Disable the default loggers
+#logging.level.org = WARN
+#logging.level.blog = WARN
+### Show SQL executed with parameter bindings
+#logging.level.org.hibernate.SQL = DEBUG
+#logging.level.org.hibernate.type.descriptor = TRACE
+#spring.jpa.properties.hibernate.format_sql = TRUE
 
 #Database Configuration
 #spring.datasource.driver-class-name = com.mysql.jdbc.Driver
@@ -7,7 +20,9 @@ spring.thymeleaf.cache = false
 #spring.datasource.username = root
 #spring.datasource.password = root
 
-#Error managing
-#server.error.whitelabel.enabled=false
-#spring.mvc.throw-exception-if-no-handler-found=true
-#spring.resources.add-mappings=false
+# wro4j config
+wro4j.managerFactory.preProcessors=cssUrlRewriting,cssImport
+wro4j.managerFactory.postProcessors=rubySassCss,cssMin
+wro4j.managerFactory.resourceWatcherUpdatePeriod = 5
+wro4j.managerFactory.resourceWatcherAsync = true
+# wro.ignoreMissingResources = false
