--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.thymeleaf.cache = false
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost/blog?characterEncoding=utf8
+spring.datasource.url = jdbc:mysql://localhost:8889/blog_spring?characterEncoding=utf8
 spring.datasource.username = root
 spring.datasource.password = root
 # Configure Hibernate DDL mode: create / update
