--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
         </dependency>
@@ -49,7 +55,6 @@
             <artifactId>wro4j-extensions</artifactId>
             <version>1.8.0</version>
         </dependency>
-
     </dependencies>
 
     <properties>
