--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.thymeleaf.cache = false
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:8889/blog_spring?characterEncoding=utf8
+spring.datasource.url = jdbc:mysql://localhost:8889/blog_spring
 spring.datasource.username = root
 spring.datasource.password = root
-# Configure Hibernate DDL mode: create / update
-spring.jpa.properties.hibernate.hbm2ddl.auto = create
+#spring.jpa.hibernate.ddl-auto=create
+
 # Disable the default loggers
 #logging.level.org = WARN
 #logging.level.blog = WARN
@@ -17,6 +17,3 @@ spring.jpa.properties.hibernate.hbm2ddl.auto = create
 # wro4j config
 wro4j.managerFactory.preProcessors=cssUrlRewriting,cssImport
 wro4j.managerFactory.postProcessors=rubySassCss,cssMin
-wro4j.managerFactory.resourceWatcherUpdatePeriod = 5
-wro4j.managerFactory.resourceWatcherAsync = true
-# wro.ignoreMissingResources = false
