--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,19 @@
 spring.thymeleaf.cache = false
-spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:8889/blog_spring
-spring.datasource.username = root
-spring.datasource.password = root
-#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.driver-class-name = com.mysql.jdbc.Driver
+#spring.datasource.url = jdbc:mysql://localhost:8889/blog_spring
+#spring.datasource.username = root
+#spring.datasource.password = root
+spring.jpa.hibernate.ddl-auto=update
+#Create = Drops database on app startup
+#Update = Knows that it has to update the database
 
 # Disable the default loggers
 #logging.level.org = WARN
 #logging.level.blog = WARN
 ### Show SQL executed with parameter bindings
-#logging.level.org.hibernate.SQL = DEBUG
-#logging.level.org.hibernate.type.descriptor = TRACE
-#spring.jpa.properties.hibernate.format_sql = TRUE
+logging.level.org.hibernate.SQL = DEBUG
+logging.level.org.hibernate.type.descriptor = TRACE
+spring.jpa.properties.hibernate.format_sql = TRUE
 
 
 # wro4j config
