--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.thymeleaf.cache = false
+debug=true
 spring.jpa.hibernate.ddl-auto=update
 #Create = Drops database on app startup
 #Update = Knows that it has to update the database
+
+#activate gzip compression GOTTA GO FAST!!!
+server.compression.enabled: true
+server.compression.mime-types: application/json,application/xml,text/html,text/xml,text/plain,text/css,application/javascript
 
 # Disable the default loggers
 #logging.level.org = WARN
