removed unnecessary settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,16 @@
 spring.thymeleaf.cache = false
-debug=true
 spring.jpa.hibernate.ddl-auto=update
 #Create = Drops database on app startup
 #Update = Knows that it has to update the database
 
-#activate gzip compression GOTTA GO FAST!!!
+# Activate gzip compression GOTTA GO FAST!!!
 server.compression.enabled: true
 server.compression.mime-types: application/json,application/xml,text/html,text/xml,text/plain,text/css,application/javascript
 
-# Disable the default loggers
-#logging.level.org = WARN
-#logging.level.blog = WARN
+# Add color to the logs
+spring.output.ansi.enabled=ALWAYS
+
 ### Show SQL executed with parameter bindings
 logging.level.org.hibernate.SQL = DEBUG
-logging.level.org.hibernate.type.descriptor = TRACE
-spring.jpa.properties.hibernate.format_sql = TRUE
+#logging.level.org.hibernate.type.descriptor = TRACE
+#spring.jpa.properties.hibernate.format_sql = TRUE
